--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ body {
 
 h2 {
     text-align: center;
-    font-weight: bold;    
+    font-family: 'Source Sans Pro', sans-serif;            
+    color: darkgreen;
 }
 
 h4 {
@@ -26,13 +27,13 @@ h4 {
     background-color: whitesmoke;
 }
 
-/* styles for button to open/close panel */
+/* styles for button to open/close panels */
 
 .btn {
+    font-family: 'Source Sans Pro', sans-serif;
     background-color: #d3edf1;
     border-radius: 0;
-    color: #4a4646;
-    
+    color: #4a4646;      
 }
 
 .btn-primary.focus, .btn-primary:focus {
@@ -44,8 +45,7 @@ h4 {
 
 .btn:hover {
     border: none;
-    background-color: cadetblue;
-    transition: 2s;
+    background-color: cadetblue;    
 }
 
 /* style for show/hide panel */
@@ -67,31 +67,61 @@ h4 {
 
 /* styles for contact details info */
 
-span {
+.bio {
     display: none;
-    width: 200px;
-    background-color: #555;
-    color: #fff;
-    text-align: left;
-    padding: 10px;
-        
-    margin-top: -5px;           
+    width: 220px;
+    background-color: #c1c1c1;
+    font-family:'Source Sans Pro', sans-serif;
+    font-size: 95%;
+    font-weight: bold;
+    text-align: left;    
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;    
     position: relative;   
     left: 102%;
 }
 
+/*styles for summary button */
 
-.row #summary {
+#summary {   
     text-align: center;
     background-color: white;  
     color: green;
 }
 
-.row #summary:hover {
+#summary:hover {
     color: darkgreen;
 }
 
+/* styles for popup summary box */
+
+.popup {
+    display: none;
+    z-index: 1;
+    
+    width: 420px;
+    
+    background-color: whitesmoke;
+    border-width: 2px;
+    border-color: green;
+    padding: 10px 15px 10px 10px;
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    list-style: none;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
+    overflow: auto;
+
+}
+
+ul {
+    list-style: none;
+} 
+
 .footer {
+    padding-top: 20px;
     text-align: center;
     font-size: 90%;
 }
